# dpu

./: .gitignore  CONTRIBUTING.md  README.md  features.txt  pyproject.toml  requirements.txt  setup.py  spill_check.py
calibration/: 2dcalibrationdata.json  calibrate.py  od_calibration.xlsx  od_data.xlsx  pump_calibration.xlsx  readme.md  sigmoid_fit.py  temp_calibration.xlsx
experiment/: send_command.py  server_test.py  test_hardware.py
experiment/epace-template/: custom_script.py  driftSimulation.py  eVOLVER.py  nbstreamreader.py  od_cal.json  pump_cal.json  temp_cal.json
experiment/epace-template/analysis/: plot_od_drift.ipynb
experiment/system_check/: custom_script.py
experiment/template/: custom_script.py  eVOLVER.py  eVOLVER_module.py  light_cal.txt  main_eVOLVER.py  nbstreamreader.py  od_cal.json  pump_cal.json  temp_cal.json  test_eVOLVER.py
experiment/tests/: README.md  test_eVOLVER.py
graphing/: README.md  README.rtf
graphing/src/: db.sqlite3  manage.py
graphing/src/cloudevolution/: filescan.py  settings.py  urls.py  views.py  wsgi.py
graphing/src/static_in_pro/our_static/css/: simple-sidebar.css
graphing/src/templates/: base.html  bokeh_css.html  dilutions.html  experiment.html  graph_exp.html  head_css.html  home.html  javascript.html  navbar.html  sidebar.html  sidebar_links.html  simple_chart.html  vial.html  vialbar.html
graphing/static_in_env/static_root/css/: simple-sidebar.css
system_check/: eVOLVER.py  evolver-quality-control-f5ec138ddaad.json  pump_cal.txt
