[tool.poetry]
name = "dpu"
version = "2.0.1"
description = ""
authors = []
license = "MIT"


[tool.poetry.dependencies]
python = ">3.9, <3.10"
scipy = "^1.2.1"
numpy = "^1.16.1"
Django = "1.8.6"
django-crispy-forms = "^1.7.2"
matplotlib = "^3.0.2"
socketIO-client = "^0.7.2"
bokeh = "^0.10.0"
Jinja2 = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
